# openfhe-numpy

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_for_developer.txt  LICENSE  MANIFEST.in  README.md  bk_setup.cfg  bk_setup.py  commit.sh  dev_mode.sh  install.sh  new_install.sh  pyproject.toml  report.md  run-example.py  run_test.py  tango_commit.sh
config/: config.h.in
core/examples/: demo-matrix-multiplication.cpp  demo-single-matrix-operation.cpp  simple-matrix-1-operations.cpp  simple-matrix-operations.cpp
core/include/openfhe_numpy/: array_metadata.h  config.h  config.h.in  enc_matrix.h  helper.h  utils.h
core/include/openfhe_numpy/internal/: array_metadata.h  helper.h
core/src/: array_metadata.cpp  bindings.cpp  enc_matrix.cpp  utils.cpp
cpp/: CMakeLists.txt  enc_matrix.cpp  enc_matrix.h  helper.h  utils.cpp  utils.h
cpp/examples/: matvec_cacl.cpp  simple-matrix-1-operations.cpp  simple-matrix-operations.cpp
cpp/include/: array_metadata.h  config.h  enc_matrix.h  helper.h  log.h  matrixcontext.h  utils.h
cpp/src/: array_metadata.cpp  bindings.cpp  enc_matrix.cpp  utils.cpp
cpp/test/: example.cpp
docs/: Doxyfile.in  SPHINX_SETUP.md  api.rst  conf.py  constructor.rst  enum.rst  example.rst  index.rst  installation.rst  matrix_arithmetic.rst  requirements.txt  tensor.rst
env_openfhe/: pyvenv.cfg
examples/: check_paths.py  demo.py  demo_matrix_accumulation.py  demo_matrix_addition.py  demo_matrix_sum.py  demo_matrix_transpose.py  demo_matvec_product.py  demo_square_matrix_product.py  demo_vector.py  general.py  simple_matrix_accumulation.py  simple_matrix_addition.py  simple_matrix_sum.py  simple_matrix_transpose.py  simple_square_matrix_product.py  simple_vector_operations.py
examples/python/: simple_convolution.py  simple_matrix_accumulation.py  simple_matrix_addition.py  simple_matrix_mean.py  simple_matrix_sum.py  simple_matrix_transpose.py  simple_matrix_vector_product.py  simple_square_matrix_product.py  simple_vector_operations.py
openfhe-env/: pyvenv.cfg
openfhe_numpy/: __init__.py  _version.py  config.py  constant.py
openfhe_numpy/cpp/examples/: demo-matrix-multiplication.cpp  demo-single-matrix-operation.cpp
openfhe_numpy/cpp/include/: numpy_array_metadata.h  numpy_constants.h  numpy_enc_matrix.h
openfhe_numpy/cpp/lib/: numpy_array_metadata.cpp  numpy_bindings.cpp  numpy_enc_matrix.cpp  numpy_helper_functions.cpp  numpy_utils.cpp
openfhe_numpy/operations/: __init__.py  api.py  arithmetic.py  crypto_context.py  crypto_helper.py  dispatch.py  matrix_api.py  matrix_arithmetic.py
openfhe_numpy/tensor/: __init__.py  block_ctarray.py  block_tensor.py  constructors.py  ctarray.py  ptarray.py  tensor.py
openfhe_numpy/utils/: __init__.py  constants.py  errors.py  format.py  log.py  matlib.py  packing.py  typecheck.py  utils.py
python/: CMakeLists.txt  bindings.cpp  constant.py  example.py  helper.py  matrix.py
python/auto_test/: test_mm_addition.py  test_mul_matvec.py  test_mul_mm_addition.py  test_mul_mm_square.py  test_vector_addition.py  test_vector_inner_prod.py
python/examples/: demo.py  demo_matrix_accumulation.py  demo_matrix_addition.py  demo_matrix_transpose.py  demo_matvec_product.py  demo_square_matrix_product.py  general.py  matrix_transpose_calc.py  matvec_calculation.py  simple_demo.py  square_matmul_calculation.py
python/openfhe_numpy/: __init__.py  config.py
python/openfhe_numpy/operations/: __init__.py  crypto_context.py  matrix_api.py  matrix_arithmetic.py
python/openfhe_numpy/tensor/: block_ctarray.py  constructors.py  ctarray.py  ptarray.py  tensor.py
python/openfhe_numpy/utils/: __init__.py  debugger.py  log.py  utils.py
python/src/openfhe-numpy/: __init__.py  config.py  ctarray.py  matlib.py  ptarray.py  utils.py
python/src/openfhe_numpy/: __init__.py  algebra.py  config.py  constructors.py  crypto_context.py  ctarray.py  log.py  matlib.py  new_tensor.py  ptarray.py  tensor.py  utils.py
python/tests/: helper.py  simple_demo.py
python/unitests/: base_unittest.py  ckks_params.csv  main_unittest.py  matrix_transpose_test.py  test.py  test_matrix_sumcum_cols.py  test_matrix_sumcum_rows.py  test_matrix_transpose.py  test_mm_addition.py  test_mul_matvec.py  test_mul_mm_square.py  test_vector_addition.py  test_vector_inner_prod.py
src/: __init__.py  __init__.pyi  version.py.in
src/cpp/examples/: demo-matrix-multiplication.cpp  demo-single-matrix-operation.cpp
src/cpp/include/: numpy_array_metadata.h  numpy_constants.h  numpy_enc_matrix.h  numpy_helper_functions.h  numpy_utils.h
src/cpp/lib/: numpy_array_metadata.cpp  numpy_bindings.cpp  numpy_enc_matrix.cpp  numpy_utils.cpp
src/operations/: __init__.py  crypto_context.py  dispatch.py  matrix_api.py  matrix_arithmetic.py
src/tensor/: __init__.py  block_tensor.py  constructors.py  ctarray.py  ptarray.py  tensor.py
src/utils/: __init__.py  constants.py  debugger.py  errors.py  format.py  log.py  matlib.py  packing.py  typecheck.py
tests/: README.md  __init__.py  __main__.py  ckks_params_auto.csv  ckks_params_high_depth.csv  ckks_params_mul.csv  main_unittest.py  test_adv_matvec.py  test_adv_square_matmul.py  test_imports.py  test_matrix_addition.py  test_matrix_mean.py  test_matrix_sum.py  test_matrix_sumcum.py  test_matrix_sumcum_cols.py  test_matrix_sumcum_rows.py  test_matrix_transpose.py  test_mm_addition.py  test_mul_matvec.py  test_mul_mm_square.py  test_simple_matrix_operation.py  test_simple_vector_operation.py  test_vector_addition.py  test_vector_inner_prod.py
tests/core/: __init__.py  test_crypto_context.py  test_framework.py  test_utils.py
tests/crypto_params/: ckks_params.csv
