[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11>=2.6", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "openfhe-numpy"
version = "0.0.1"
description = "NumPy-like API for homomorphic encryption with OpenFHE"
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy>=1.19"]
license = {text = "BSD-3-Clause"}

[tool.scikit-build]
build-dir = "_skbuild"

[tool.scikit-build.cmake]
version = ">=3.16"
build-type = "Release"

[tool.scikit-build.build]
targets = ["_onp_cpp"]

[tool.scikit-build.sdist]
include = [
  "core/",
  "python/",
  "CMakeLists.txt",
  "README.md",
  "LICENSE"
]

[tool.scikit-build.wheel]
packages = ["python/openfhe_numpy"]
platlib = ["**/_onp_cpp*.so"]

[tool.scikit-build.install]
components = ["python_modules"]
